--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,26 @@
 <head>
   <meta charset="utf-8">
   <title>Ngx-Snake</title>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kalam" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Allura" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower" rel="stylesheet">
 </head>
 
 
 <body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/8.3.2/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
   <ngx-snake>Loading...</ngx-snake>
 </body>
 
