Icono y nombre aplicación, iconos mas grandes

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ngx-Snake</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <title>EUIGS Feria 2021</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kalam" rel="stylesheet">
